# pipforester

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  graph_requirements.txt  pyproject.toml  sandbox.ipynb
pipforester/: __init__.py  deptree.py
